--- a/main/res/layout/activity_camera.xml
+++ b/main/res/layout/activity_camera.xml
@@ -7,7 +7,9 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    tools:context="com.roc.sndchk.sndchkapp.SNDCHK">
+    tools:context="com.roc.sndchk.sndchkapp.CameraActivity">
+
+
 
     <TextView
         android:layout_width="wrap_content"
